tests/negative/test_expr_bin_bad_types.orb
fnc main() {
    let i32 x = 1;
    let c8 a = 'a';
    x+a;
}